<resources>
    <string name="app_name">CatchTheBus</string>
    <string name="init_search">Search by</string>
    <string name="location">Location</string>
    <string name="query">Station name</string>
    <string name="mTogglebutton">ToggleButton</string>
    <string name="locationSearch">To search for stations near you press the location button</string>
    <string name="textSearchStart">To search by name type in the name of your station and press search</string>
    <string name="search">Search</string>
    <string name="stationsnearyou">Stations closest to you</string>
    <string name="queryStations">Stations matching your search query:</string>
    <string name="textview">querytext</string>
    <string name="station_name">Station name</string>
    <string name="station_town">Station town</string>
    <string name="distance">Distance</string>
    <string name="pickABus">Pick a bus</string>
    <string name="yourStop">Your stop</string>
    <string name="linePublicNumber">Line public number</string>
    <string name="destCode50">Destination code 50</string>
    <string name="Exp_dept_t_as_s">EDA</string>
    <string name="timingPointName">Timing point name</string>
    <string name="exp_pass_dept_time_as_time">EDA</string>
    <string name="tripStopStatus">Trip Stop Status</string>
    <string name="yourBus">Your bus</string>
    <string name="yourStop2">Your stop</string>
    <string name="distanceBetween">Your distance</string>
    <string name="timeBetween">Your time</string>
    <string name="advice">Your advice</string>
    <string name="busJourney">The bus journey is shown below:</string>
    <string name="startService">Start Service</string>
    <string name="stopService">Stop Service</string>
    <string name="info">Journey Info</string>
    <string name="maps">Maps</string>
    <string name="yourBusInfo">Your bus info here</string>
    <string name="title_activity_maps">Map</string>
    <string name="refresh">Refresh</string>
    <string name="timeInfoHere">Time Info Here</string>
</resources>
