<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".BusActivity">

    <TextView
        android:id="@+id/busName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/yourBus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/passesRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busJourney"
        />

    <TextView
        android:id="@+id/yourStop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourStop2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busName"
        android:textSize="16sp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/timeBetween"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeBetween"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourStop2"
        android:textSize="16sp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/distanceBetween"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanceBetween"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeBetween"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advice"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distanceBetween"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/busJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busJourney"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/advice"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>