<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/timing_point_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timingPointName"
            android:textSize="12sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/exp_pass_dept_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timing_point_name"
            android:text="@string/exp_pass_dept_time_as_time"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/trip_stop_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exp_pass_dept_time"
            android:text="@string/tripStopStatus"
            android:textSize="12sp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>