<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/station_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_name"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/station_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/station_name"
            android:text="@string/station_town"
            android:textSize="16sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/station_name"
            android:gravity="end"
            android:text="@string/distance"
            android:textSize="20sp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>