<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/line_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linePublicNumber"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/exp_dept_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_number"
            android:text="@string/Exp_dept_t_as_s"
            android:textSize="16sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/destCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/line_number"
            android:gravity="end"
            android:text="@string/destCode50"
            android:textSize="16sp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>